# MCP-AIWorker

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README_JA.md  list_gemini_models.py  mcp_server.py  pyproject.toml  requirements.txt  ruleset.json  run.bat  setup.bat  test_integration.py  verify_parsing.py
.github/workflows/: ci.yml  release.yml
data/: token_usage.json
docs/: MCP_CONFIGURATION.md  ROADMAP.md  シーケンス図.md  フローチャート図.md  概念的要件定義書.md
docs/ADR/: ADR-0001-selection-of-sub-llm-and-edit-strategy.md  ADR-0002-git-workflow.md  ADR-0003-adoption-of-pytest-and-mocking.md  ADR-0004-use-google-ai-studio-api.md  ADR-0005-reject-dedicated-local-translation-models.md  ADR-0011-switch-to-http-transport.md  ADR-0012-robust-output-control-and-prompt-externalization.md  ADR-0013-terminal-execution-log-summarization.md  ADR-0014-rename-to-mcp-aiworker-and-file-splitting.md  ADR-0015-structured-logging-with-loguru.md  ADR-0017-unit-test-generation-tool.md  ADR-0019-fail-fast-syntax-validation.md  ADR-0020-ast-based-semantic-context-compression.md  ADR-0022-ignore-patterns-for-token-efficiency.md  (+3 more)
mcp_ai_worker/: client.py  logger.py  metrics.py  server.py  utils.py
mcp_ai_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompts/: draft_system_prompt.txt  target_finder_prompt.txt  unit_test_system_prompt.txt
scripts/: analyze_tokens.py  show_dashboard.py
sub_cheap_mcpaiagent/: server.py
tests/: debug_gemini_500.py  test_ast_compressor.py  test_mcp_server.py  test_merge.py  test_merge_issue.py  test_metrics.py
(+10 files in other folders)
